# lumen-py

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml
.github/workflows/: docker.yml
design/: LUMEN-PY-ARCHITECTURE.md
firmware/: api.py  code.py  drivers.py  stagemanager.py
lumen/: __init__.py  canvas.py  config.py  fonts.py  registry.py  renderer.py  scene.py  server.py  stage.py
lumen/assets/fonts/: 4x6.bdf  5x8.bdf  6x13.bdf
lumen/scenes/: __init__.py  _icons.py  clock.py  countdown.py  github.py  idle.py  transit.py  weather.py
lumen/sources/: __init__.py  github.py  rmv.py  weather.py
tests/: conftest.py  golden_utils.py  test_encoder.py  test_firmware_loop.py  test_fonts_and_renderer.py  test_scenes_golden.py  test_server.py  test_sources.py  test_stage.py
tools/: dump_frame.py  update_golden.py
